[metadata]
name = coriolis
summary = Migration as a Service
description-file =
    README.rst
author = Cloudbase Solutions SRL
author-email = info@cloudbasesolutions.com
home-page = http://cloudbase.it
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    coriolis

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    coriolis-api = coriolis.cmd.api:main
    coriolis-conductor = coriolis.cmd.conductor:main
    coriolis-worker = coriolis.cmd.worker:main
    coriolis-replica-cron = coriolis.cmd.replica_cron:main
    coriolis-dbsync = coriolis.cmd.db_sync:main

[wheel]
universal = 1
