[metadata]
name = coriolis
summary = Migration as a Service
description_file =
    README.rst
author = Cloudbase Solutions SRL
author_email = info@cloudbasesolutions.com
home_page = http://cloudbase.it
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    coriolis

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    coriolis-api = coriolis.cmd.api:main
    coriolis-conductor = coriolis.cmd.conductor:main
    coriolis-worker = coriolis.cmd.worker:main
    coriolis-transfer-cron = coriolis.cmd.transfer_cron:main
    coriolis-scheduler= coriolis.cmd.scheduler:main
    coriolis-minion-manager= coriolis.cmd.minion_manager:main
    coriolis-dbsync = coriolis.cmd.db_sync:main
    coriolis-deployer-manager = coriolis.cmd.deployer_manager:main

[wheel]
universal = 1
